fix(navbar): add overflow hidden on body when menu is open (DA_UK-697)

--- a/packages/components/navbar/src/navbar.module.css
+++ b/packages/components/navbar/src/navbar.module.css
@@ -63,3 +63,7 @@
   padding-left: 25px;
   padding-bottom: 100px;
 }
+
+.bodyOverflowHidden {
+  overflow: hidden;
+}
